--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -12,7 +12,8 @@
   justify-content: space-between;
 
   height: fit-content;
-  padding-left: 10px;
+  padding-top: 10px;
+  padding-left: 15px;
 
   background-color: white;
 }
