--- a/instagram/src/components/Navigation/SearchBar/SearchBar.css
+++ b/instagram/src/components/Navigation/SearchBar/SearchBar.css
@@ -7,7 +7,6 @@
   border: 1px solid #dbdbdb;
   border-radius: 5px;
 
-  color: #9a9a9a;
   font-size: 0.8rem;
   text-align: left;
 
@@ -19,6 +18,9 @@
 
   text-overflow: ellipsis;
   outline: none;
+}
+.search-input::placeholder {
+  color: #a2a2a2;
 }
 
 /* .search-input:not(:placeholder-shown) {
